# poweroutageanalysis

./: .env.example  .gitignore  README.md  pyproject.toml
data/normalized/: 2000_Normalized-2001_Normalized.csv  2001_Normalized-2002_Normalized.csv  2002_Normalized-2003_Normalized.csv
data/original/: 2000_Annual_Summary.csv  2000_Annual_Summary_Converted.csv  2001_Annual_Summary.csv  2001_Annual_Summary_Converted.csv  2023_Annual_Summary.xls
poweroutageanalysis/: __init__.py  __main__.py  ai.py  poweroutageanalysis.py  types.py  util.py
